LU-16780 osd: check all commit callbacks done

DMU's txg_wait_synced() may return before all corresponding commit
callbacks have been called. this break Lustre's quota logic which
builds internal accounting on top of commit callbacks.

add extra "wait" to ensure all commit callbacks registered before
osd_sync() have been called.

Test-Parameters:  fstype=zfs testlist=sanity-quota,sanity-quota
Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: I665e40be5bf4140dadb17c96927ef93c383fa994
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50790
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Hongchao Zhang <hongchao@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>